[tool.poetry]
name = "hashtagbot"
version = "0.1.0"
description = ""
authors = ["TurtleOld <dev@pavlovteam.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
pytelegrambotapi = "^4.14.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.23"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    /(
        | migrations
    )
  )/
)
'''