[tool.poetry]
name = "hashtagbot"
version = "0.1.0"
description = ""
authors = ["TurtleOld <dev@pavlovteam.ru>"]
readme = "README.rst"
packages = [
    { include = 'hashtag_bot' }
]

[tool.poetry.dependencies]
python = "^3.11.2"
pytelegrambotapi = "^4.15.2"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
aiohttp = "^3.9.1"
watchdog = "^3.0.0"
psutil = "^5.9.7"
icecream = "^2.1.3"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.25" }
coverage = "^7.4.0"

[tool.poetry.scripts]
hashtag-bot = "hashtag_bot.engine:main"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
poetry-plugin-export = "^1.6.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    /(
        | migrations
    )
  )/
)
'''
